<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">WCap\'Cal</string>
    <string name="title_activity_first_page">FirstPage</string>
    <string name="action_settings">Paramètres avancés</string>
    <string name="Bienvenue">Bienvenue dans l\'application WCap\'Cal</string>
    <string name="StartIndication">Pour commencer, appuyez sur le bouton et entrez les données de votre agenda.</string>
    <string name="NewAgenda">Nouveau agenda</string>
    <string name="AgendaList">Liste des agendas</string>
    <string name="AddCalendar">Ajout d\'un agenda</string>
    <string name="Url">URL du serveur :</string>
    <string name="Identifiant">Identifiant :</string>
    <string name="Password">Mot de passe :</string>
    <string name="NomAgenda">Nom de l\'agenda :</string>
    <string name="Valider">Valider</string>
    <string name="Annuler">Annuler</string>
    <string name="UrlExemple">https://agenda.univ-ubs.fr</string>
    <string name="changerParametre">changerParametre</string>
    <string name="AdvandedParameter">Paramètres avancés</string>
    <string name="SyncAuto">Synchronisation automatique</string>
    <string name="about">Informations</string>
    <string name="InformationContain">Cette application a été développée par Simon BRUNOU, François DUCLOS, Quentin GUILLOU et Mehdi SABIR, étudiants en DUT informatique, dans le cadre de leur projet de synthèse. </string>
    <string name="informationAppli">Cette application permet la synchronisation d\'agenda (SUN CALENDAR) sur votre application de visualisation d\'agenda.</string>
    <string name="SyncDelai">Délai de synchronisation :</string>
    <string name="Clear">Supprimer tous les agendas</string>
    <string name="DataRecept">Mode de réception des données :</string>
    <string name="Reseau">Réseau</string>
    <string name="Wifi">Wi-fi</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="sync">Synchronisation automatique</string>
    <string name="summary_pref_1">summary_pref_1</string>
    <string name="title_category_1">title_category_1</string>
    <string name="evenements">Liste des événements</string>
    <string name="nb_event">nb_event</string>
    <string name="color">Couleur de l\'agenda</string>
    <string name="title_activity_picker">WCap\'Cal</string>
    <string name="hello_world">Hello world!</string>
    <string name="button">Choisir la couleur de l\'agenda</string>
    <string name="display_colortext">Couleur de l\'agenda : </string>
    <string name="Pourcentage">"Choisir le pourcentage de batterie où la synchronisation est interrompue "</string>
    <string name="PourcentageValue">&lt;value></string>
    <string name="Couleur">Couleur de l\'agenda :</string>

</resources>
